<package>
  <name>rostful_examples</name>
  <version>0.0.8</version>
  <description>
      REST API for ROS - Examples
  </description>

  <license>BSD</license>

  <url type="repository">https://github.com/asmodehn/rostful</url>
  <url type="bugtracker">https://github.com/asmodehn/rostful/issues</url>

  <author>Ben Kehoe</author>
  <maintainer email="asmodehn@gmail.com">AlexV</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslint</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>turtlesim</run_depend>

  <!-- documentation dependencies -->
  <build_depend>python-catkin-pkg</build_depend>

</package>


